# HIKROBOTcam-ROS-IDMVS

./: CMakeLists.txt  README.md  package.xml
config/: camera_down.yaml
include/: MvCodeReaderCtrl.h  MvCodeReaderErrorDefine.h  MvCodeReaderParams.h  MvCodeReaderPixelType.h
include/hik_camera/: hik_camera.h  hik_camera_base.h  hik_camera_enum.h  hik_camera_ros.h  hik_imgbuffer.h  hik_infodecoder.h  hik_sdk_mode.h  hik_tag.h  hik_udp_mode.h
launch/: hik_camera.launch
src/: hikcam.cpp  hikcam_imgbuffer.cpp  hikcam_infodecoder.cpp  hikcam_node.cpp  hikcam_ros.cpp  hikcam_sdk_mode.cpp  hikcam_tag.cpp  hikcam_udp_mode.cpp
